fix: restore table of contents on pages that use the blog-post template
The ToC now shows up in the sidebar, thus has the advantage of always staying visible, at least on non-mobile screens.

This layout (toc inside the sidebar) also forces me to keep the headings concise so as to keep the sidebar from widening too much.

The min-width of the main pane of a with-sidebar had to be adjusted so that the layout doesnt switch to a top-bottom mobile layout too early.

--- a/site/css/components/index.css
+++ b/site/css/components/index.css
@@ -108,6 +108,12 @@ a.site-title:hover {
     font-size: 0.9em;
 }
 
+.toc-1:has(*)::before {
+    content: 'Table of Contents';
+    font-size: var(--s1);
+    font-weight: bold;
+}
+
 .toc-1:has(*) {
     list-style-position: inside;
     margin-inline-start: 0;
